fixed more invisible text

--- a/src/index.css
+++ b/src/index.css
@@ -43,4 +43,6 @@ body{
   color: #f4f5f8;
 }
 
-
+.p-black{
+  color: black;
+}
